# SimpleScanner

./: .gitignore
SimpleScannerSample/: settings.gradle
SimpleScannerSample/app/: build.gradle
SimpleScannerSample/app/src/main/: AndroidManifest.xml
SimpleScannerSample/app/src/main/java/cn/szx/simplescannersample/: SimpleScannerActivity.java  ViewFinderView.java
SimpleScannerSample/libyuv/: CMakeLists.txt  build.gradle
SimpleScannerSample/libyuv/src/main/: AndroidManifest.xml
SimpleScannerSample/libyuv/src/main/cpp/: YuvJni.cpp
SimpleScannerSample/libyuv/src/main/cpp/libyuv/source/: convert_to_i420.cc
SimpleScannerSample/libyuv/src/main/java/com/verifone/kail1/libyuv/: YuvUtil.java
SimpleScannerSample/libzbar/: build.gradle
SimpleScannerSample/libzbar/src/main/: AndroidManifest.xml
SimpleScannerSample/libzbar/src/main/jni/iconv/lib/: loop_unicode.h
SimpleScannerSample/libzbar/src/main/res/values/: strings.xml
SimpleScannerSample/simplescanner/: build.gradle
SimpleScannerSample/simplescanner/src/main/java/cn/szx/simplescanner/zbar/: ZBarScannerView.java
